Небольшие изменения